refactor(qcommon): add method to convert ChrPosition to Vcf string